@@ -24,7 +24,7 @@ module Sequel
     # * Primary key lookups (e.g. Model[1])
     # * Model.all
     # * Model.each
-    # * Model.first (only without arguments or with integer argument)
+    # * Model.first (without block, only supporting no arguments or single integer argument)
     # * Model.count (without an argument or block)
     # * Model.map
     # * Model.as_hash
@@ -81,21 +81,18 @@ module Sequel
           end
         end
 
-        # Returns the first matching record if no arguments are given,
-        # or if a integer argument is given, it is interpreted as a limit,
-        # and then returns all matching records up to that limit,
-        # without issuing a database query.
-        #
-        # Calls super (with issuing a database query)
-        # if Hash argument is passed, or a block is given.
-        #
-        # If there are no records in the array of instances, returns nil
-        # (or an empty array if an integer argument is given).
-        def first(*args, &block)
-          return super if block || args.length > 1
-          return @all.first if args.length.zero?
-          return super unless (arg = args.first).is_a?(Integer)
-          @all[0...arg]
+        # If a block is given, multiple arguments are given, or a single
+        # non-Integer argument is given, performs the default behavior of
+        # issuing a database query.  Otherwise, uses the cached values
+        # to return either the first cached instance (no arguments) or an
+        # array containing the number of instances specified (single integer
+        # argument).
+        def first(*args)
+          if block_given? || args.length > 1 || (args.length == 1 && !args[0].is_a?(Integer))
+            super
+          else
+            @all.first(*args)
+          end
         end
 
         # Get the number of records in the cache, without issuing a database query.
